[gd_scene load_steps=41 format=4 uid="uid://euwow6oc8gcn"]

[ext_resource type="TileSet" uid="uid://07fq3rspk8ia" path="res://scenes/tileset.tres" id="1_cfqmc"]
[ext_resource type="PackedScene" uid="uid://iu2q66clupc6" path="res://scenes/game_elements/characters/player/player.tscn" id="2_swcam"]
[ext_resource type="Script" uid="uid://c68oh8dtr21ti" path="res://scenes/game_logic/sequence_puzzle.gd" id="3_802lm"]
[ext_resource type="PackedScene" uid="uid://b8sok264erfoc" path="res://scenes/game_elements/props/sequence_puzzle_object/sequence_puzzle_object.tscn" id="4_sch8c"]
[ext_resource type="AudioStream" uid="uid://cg57q82pb243w" path="res://assets/third_party/xylophone-sampler-pack/xylophone-c3.ogg" id="5_5w5g7"]
[ext_resource type="AudioStream" uid="uid://b83x8h0ob5mpq" path="res://assets/third_party/xylophone-sampler-pack/xylophone-d3.ogg" id="6_cd1r1"]
[ext_resource type="AudioStream" uid="uid://cmtiwg2cylmts" path="res://assets/third_party/xylophone-sampler-pack/xylophone-e3.ogg" id="7_vt02y"]
[ext_resource type="AudioStream" uid="uid://8k1hyi4gjae4" path="res://assets/third_party/xylophone-sampler-pack/xylophone-f3.ogg" id="8_cu5nb"]
[ext_resource type="AudioStream" uid="uid://6oahn2ucxxjv" path="res://assets/third_party/xylophone-sampler-pack/xylophone-g3.ogg" id="9_4f2bf"]
[ext_resource type="AudioStream" uid="uid://bdboi4ndapqec" path="res://assets/third_party/xylophone-sampler-pack/xylophone-a3.ogg" id="10_xwvic"]
[ext_resource type="PackedScene" uid="uid://be4o3ythda4cu" path="res://scenes/game_elements/props/sequence_puzzle_hint_sign/sequence_puzzle_hint_sign.tscn" id="11_ig5k6"]
[ext_resource type="SpriteFrames" uid="uid://bhcgkxhy4cqf4" path="res://scenes/quests/story_quests/template/3_template_sequence_puzzle/template_sign_2.tres" id="12_gvu8y"]
[ext_resource type="Script" uid="uid://ccc78coj2b1li" path="res://scenes/game_logic/sequence_puzzle_step.gd" id="13_mi3la"]
[ext_resource type="Texture2D" uid="uid://bhqanyxhpxpm" path="res://assets/first_party/rocks/Rock_Idle.png" id="14_dwbnx"]
[ext_resource type="Script" uid="uid://b7j5vf4n3qfxc" path="res://scenes/quests/story_quests/ElUltimoBosque/3_ElUltimoBosque_sequence_puzzle/RocasPuzzle.gd" id="14_fmak2"]
[ext_resource type="PackedScene" uid="uid://fuhl3l6gxq5k" path="res://scenes/game_elements/props/collectible_item/collectible_item.tscn" id="14_tcvxo"]
[ext_resource type="Script" uid="uid://bgmwplmj3bfls" path="res://scenes/globals/game_state/inventory/inventory_item.gd" id="15_kph77"]
[ext_resource type="Resource" uid="uid://bb1g8ftnxjhvh" path="res://scenes/quests/story_quests/template/3_template_sequence_puzzle/template_sequence_puzzle.dialogue" id="16_ptwq2"]
[ext_resource type="PackedScene" uid="uid://covsdqqsd6rsy" path="res://scenes/game_elements/props/sign/sign.tscn" id="17_5m326"]
[ext_resource type="PackedScene" uid="uid://cfcgrfvtn04yp" path="res://scenes/ui_elements/hud/hud.tscn" id="18_6ycc1"]
[ext_resource type="Script" uid="uid://x1mxt6bmei2o" path="res://scenes/ui_elements/cinematic/cinematic.gd" id="19_gg3uk"]
[ext_resource type="Texture2D" uid="uid://c7oht7wudd8wa" path="res://assets/first_party/tiles/Cliff_Tiles.png" id="20_amcna"]
[ext_resource type="Texture2D" uid="uid://lg5dl13njsg3" path="res://assets/first_party/tiles/Grass_And_Sand_Tiles.png" id="21_ijiwr"]
[ext_resource type="Texture2D" uid="uid://cledckq31klvq" path="res://assets/first_party/tiles/Cliff_Mines_Tiles.png" id="22_8jayu"]
[ext_resource type="Texture2D" uid="uid://bx0rjuka8krb5" path="res://assets/third_party/tiny-swords/Terrain/Ground/Tilemap_Elevation.png" id="23_foot2"]
[ext_resource type="Texture2D" uid="uid://pkm6smjl8861" path="res://assets/first_party/tiles/Grass_Tiles_Light.png" id="23_w33gh"]
[ext_resource type="Texture2D" uid="uid://baelulw1inl6s" path="res://assets/third_party/tiny-swords/Deco/09.png" id="25_ia6af"]
[ext_resource type="Texture2D" uid="uid://bmhrkna5uimd4" path="res://assets/third_party/tiny-swords/Deco/08.png" id="26_3m5cn"]
[ext_resource type="Texture2D" uid="uid://bfqjvai7ajhw3" path="res://assets/third_party/tiny-swords/Deco/01.png" id="27_dwbnx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fmak2"]
radius = 29.0
height = 58.0

[sub_resource type="Resource" id="Resource_u8qfb"]
script = ExtResource("15_kph77")
name = ""
type = 2
metadata/_custom_type_script = "uid://bgmwplmj3bfls"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_x5lo1"]
texture = ExtResource("20_amcna")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ia6af"]
texture = ExtResource("22_8jayu")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3m5cn"]
texture = ExtResource("21_ijiwr")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dwbnx"]
texture = ExtResource("23_w33gh")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fmak2"]
texture = ExtResource("23_foot2")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32.5984, 60.8503, -32.5984, 59.298)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 31.667, 61.1607, -31.9774, 59.6084)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 31.3565, 60.5398, -32.2879, 62.7131)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 31.9774, 61.4712, -31.9774, 58.9875)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32.9088, 61.4712, -32.5984, 61.4712)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 31.3565, 63.0235, -31.9774, 62.4026)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 34.4611, 62.0921, -31.9774, 60.8503)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32.5984, 60.2294, -31.3565, 60.5398)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32.5984, 59.298, -32.5984, 58.9875)
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jh5wg"]
texture = ExtResource("25_ia6af")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8.6929, 1.24184, 9.31382, 1.24184, 10.5557, 15.0573, -9.00336, 16.144)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1488y"]
texture = ExtResource("26_3m5cn")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sbqjd"]
texture = ExtResource("27_dwbnx")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_jh5wg"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 3
sources/0 = SubResource("TileSetAtlasSource_x5lo1")
sources/1 = SubResource("TileSetAtlasSource_ia6af")
sources/2 = SubResource("TileSetAtlasSource_3m5cn")
sources/3 = SubResource("TileSetAtlasSource_dwbnx")
sources/4 = SubResource("TileSetAtlasSource_fmak2")
sources/5 = SubResource("TileSetAtlasSource_jh5wg")
sources/6 = SubResource("TileSetAtlasSource_1488y")
sources/7 = SubResource("TileSetAtlasSource_sbqjd")

[node name="SequencePuzzleTemplate" type="Node2D"]

[node name="TileMapLayers" type="Node2D" parent="."]

[node name="Grass" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAANAAcABAABAAEAAAANAAYABAABAAEAAAANAAUABAABAAEAAAANAAQABAABAAEAAAANAAMABAABAAEAAAANAAIABAABAAEAAAANAAEABAABAAEAAAAMAAcABAABAAEAAAAMAAUABAABAAEAAAAMAAQABAABAAEAAAAMAAMABAABAAEAAAAMAAIABAABAAEAAAAMAAEABAABAAEAAAALAAcABAABAAEAAAALAAYABAABAAEAAAALAAUABAABAAEAAAALAAQABAABAAEAAAALAAMABAABAAEAAAALAAIABAABAAEAAAALAAEABAABAAEAAAAKAAcABAABAAEAAAAKAAYABAABAAEAAAAKAAUABAABAAEAAAAKAAQABAABAAEAAAAKAAMABAABAAEAAAAKAAIABAABAAEAAAAJAAcABAABAAEAAAAJAAYABAABAAEAAAAJAAUABAABAAEAAAAJAAQABAABAAEAAAAJAAMABAABAAEAAAAJAAIABAABAAEAAAAIAAcABAABAAEAAAAIAAYABAABAAEAAAAIAAUABAABAAEAAAAIAAQABAABAAEAAAAIAAMABAABAAEAAAAIAAIABAABAAEAAAAHAAcABAABAAEAAAAHAAYABAABAAEAAAAHAAUABAABAAEAAAAHAAQABAABAAEAAAAGAAcABAABAAEAAAAGAAYABAABAAEAAAAGAAUABAABAAEAAAAGAAQABAABAAEAAAAGAAMABAABAAEAAAAGAAIABAABAAEAAAAFAAcAAQABAAEAAAAFAAYAAQABAAEAAAAFAAUAAQABAAEAAAAFAAQADQABAAEAAAAFAAMAAQABAAEAAAAFAAIABAABAAEAAAAFAAEADQABAAEAAAAEAAcAAQABAAEAAAAEAAYAAQABAAEAAAAEAAQAAQAMAAAAAAAEAAMADQABAAEAAAAEAAEAAQALAAAAAAADAAQAAQABAAEAAAADAAMABAABAAEAAAADAAEADQABAAEAAAACAAMADQABAAEAAAACAAIADQABAAEAAAACAAEAAQABAAEAAAABAAMAAQABAAEAAAABAAIAAQAMAAAAAAABAAEADQABAAEAAAACAAQAAQABAAEAAAABAAQABAABAAEAAAAAAAQADQABAAEAAAAGAAAABAABAAEAAAAHAAAABAABAAEAAAAFAAAAAQABAAEAAAAIAAAABAABAAEAAAAJAAAABAABAAEAAAALAAAABAABAAEAAAAMAAAABAABAAEAAAAKAAAABAABAAEAAAANAAAABAABAAEAAAAEAAAAAQABAAEAAAADAAAAAQABAAEAAAACAAAAAQABAAEAAAABAAAAAQABAAEAAAAAAAAAAQABAAEAAAAAAAEADQABAAEAAAAAAAIABAABAAEAAAAAAAMAAQABAAEAAAAAAAgAAQABAAEAAAABAAgAAQABAAEAAAACAAgAAQABAAEAAAADAAgAAQABAAEAAAAEAAgAAQABAAEAAAAFAAgAAQABAAEAAAAGAAgABAABAAEAAAAHAAgABAABAAEAAAAIAAgABAABAAEAAAAJAAgABAABAAEAAAAKAAgABAABAAEAAAAMAAgABAABAAEAAAALAAgABAABAAEAAAANAAgABAABAAEAAAAOAAgABAABAAEAAAAOAAcABAABAAEAAAAOAAYABAABAAEAAAAOAAUABAABAAEAAAAOAAQABAABAAEAAAAOAAMABAABAAEAAAAOAAIABAABAAEAAAAOAAEABAABAAEAAAAOAAAABAABAAEAAAAAAAUAAQABAAEAAAABAAUAAQABAAEAAAACAAUABAABAAEAAAADAAUAAQABAAEAAAAEAAUAAQABAAEAAAADAAYAAQABAAEAAAACAAYAAQABAAEAAAABAAYAAQABAAEAAAAAAAYAAQABAAEAAAAAAAcAAQABAAEAAAABAAcAAQABAAEAAAACAAcAAQABAAEAAAADAAcAAQABAAEAAAAGAAEABAABAAEAAAAHAAEABAABAAEAAAAIAAEABAABAAEAAAAJAAEABAABAAEAAAAKAAEABAABAAEAAAAPAAkABAABAAEAAAAPAAgABAABAAEAAAAPAAcABAABAAEAAAAPAAYABAABAAEAAAAPAAUABAABAAEAAAAPAAQABAABAAEAAAAPAAMABAABAAEAAAAPAAIABAABAAEAAAAPAAEABAABAAEAAAAPAAAABAABAAEAAAAPAP//BAABAAEAAAAOAAkABAABAAEAAAAOAP//BAABAAEAAAANAAkABAABAAEAAAANAP//BAABAAEAAAAMAAkABAABAAEAAAAMAP//BAABAAEAAAALAAkABAABAAEAAAALAP//BAABAAEAAAAKAAkABAABAAEAAAAKAP//BAABAAEAAAAJAAkABAABAAEAAAAJAP//BAABAAEAAAAIAAkABAABAAEAAAAIAP//BAABAAEAAAAHAAkABAABAAEAAAAHAP//BAABAAEAAAAGAAkABAABAAEAAAAGAP//BAABAAEAAAAFAAkAAQABAAIAAAAFAP//AQABAAAAAAAEAAkAAQABAAIAAAAEAP//AQABAAAAAAADAAkAAQABAAIAAAADAP//AQABAAAAAAACAAkAAQABAAIAAAACAP//AQABAAAAAAABAAkAAQABAAIAAAABAP//AQABAAAAAAAAAAkAAQABAAIAAAAAAP//AQABAAAAAAD//wkAAQAAAAIAAAD//wgAAQAAAAEAAAD//wcAAQAAAAEAAAD//wYAAQAAAAEAAAD//wUAAQAAAAEAAAD//wQABAABAAEAAAD//wMADQABAAEAAAD//wIADQABAAEAAAD//wEADQABAAEAAAD//wAAAQAAAAEAAAD/////AQAAAAAAAAAHAAMABAABAAEAAAAHAAIABAABAAEAAAADAAIAAQABAAEAAAAEAAIAAQABAAEAAAAMAAYABAABAAEAAAA=")
tile_set = ExtResource("1_cfqmc")

[node name="Sand" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAD//wcADQABAAQAAAAAAAcADQABAAQAAAABAAcADQABAAQAAAACAAcADQABAAQAAAADAAcADQACAAIAAAADAAYADQAAAAAAAAAGAAUABAABAAEAAAAHAAUABAABAAEAAAAIAAUABAABAAEAAAAJAAUABAABAAEAAAAKAAUABAABAAEAAAALAAUABAABAAEAAAALAAQABAABAAEAAAAMAAQABAABAAEAAAANAAQABAABAAEAAAAOAAQABAABAAEAAAAPAAQABAABAAEAAAAEAAYADQACAAIAAAAGAAQABAABAAEAAAAHAAQABAABAAEAAAAIAAQABAABAAEAAAAJAAQABAABAAEAAAAKAAQABAABAAEAAAAMAAUABAABAAEAAAANAAUABAABAAEAAAAOAAUABAABAAEAAAAPAAUABAABAAEAAAAFAAYADQABAAQAAAA=")
tile_set = ExtResource("1_cfqmc")

[node name="OnTheGround" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Player" parent="OnTheGround" instance=ExtResource("2_swcam")]
position = Vector2(55, 494)

[node name="SequencePuzzle" type="Node2D" parent="OnTheGround" node_paths=PackedStringArray("steps")]
y_sort_enabled = true
position = Vector2(-1, 0)
script = ExtResource("3_802lm")
steps = [NodePath("Steps/SequencePuzzleStep1"), NodePath("Steps/SequencePuzzleStep2"), NodePath("Steps/SequencePuzzleStep3"), NodePath("Steps/SequencePuzzleStep4")]
metadata/_custom_type_script = "uid://c68oh8dtr21ti"

[node name="Objects" type="Node2D" parent="OnTheGround/SequencePuzzle"]
y_sort_enabled = true
position = Vector2(360, 1004)

[node name="Blue" parent="OnTheGround/SequencePuzzle/Objects" instance=ExtResource("4_sch8c")]
modulate = Color(0, 0.4, 0.6, 1)
position = Vector2(-140, -883)
audio_stream = ExtResource("5_5w5g7")

[node name="Pink" parent="OnTheGround/SequencePuzzle/Objects" instance=ExtResource("4_sch8c")]
modulate = Color(0.89, 0.2937, 0.804817, 1)
position = Vector2(-238, -889)
audio_stream = ExtResource("6_cd1r1")

[node name="Yellow" parent="OnTheGround/SequencePuzzle/Objects" instance=ExtResource("4_sch8c")]
modulate = Color(0.89, 0.804817, 0.2937, 1)
position = Vector2(-37, -887)
audio_stream = ExtResource("7_vt02y")

[node name="Green" parent="OnTheGround/SequencePuzzle/Objects" instance=ExtResource("4_sch8c")]
modulate = Color(0.188235, 0.717647, 0, 1)
position = Vector2(-36, -755)
audio_stream = ExtResource("8_cu5nb")

[node name="Purple" parent="OnTheGround/SequencePuzzle/Objects" instance=ExtResource("4_sch8c")]
modulate = Color(0.464066, 0.2937, 0.89, 1)
position = Vector2(-346, -885)
audio_stream = ExtResource("9_4f2bf")

[node name="Red" parent="OnTheGround/SequencePuzzle/Objects" instance=ExtResource("4_sch8c")]
modulate = Color(0.89, 0.2937, 0.2937, 1)
position = Vector2(-338, -750)
audio_stream = ExtResource("10_xwvic")

[node name="Signs" type="Node2D" parent="OnTheGround/SequencePuzzle"]
y_sort_enabled = true

[node name="HintSign1" parent="OnTheGround/SequencePuzzle/Signs" instance=ExtResource("11_ig5k6")]
position = Vector2(173, 399)

[node name="HintSign2" parent="OnTheGround/SequencePuzzle/Signs" instance=ExtResource("11_ig5k6")]
position = Vector2(716, 445)
sprite_frames = ExtResource("12_gvu8y")

[node name="HintSign3" parent="OnTheGround/SequencePuzzle/Signs" instance=ExtResource("11_ig5k6")]
position = Vector2(719, 252)
sprite_frames = ExtResource("12_gvu8y")

[node name="HintSign4" parent="OnTheGround/SequencePuzzle/Signs" instance=ExtResource("11_ig5k6")]
position = Vector2(907, 121)
sprite_frames = ExtResource("12_gvu8y")

[node name="Steps" type="Node2D" parent="OnTheGround/SequencePuzzle"]

[node name="SequencePuzzleStep1" type="Node2D" parent="OnTheGround/SequencePuzzle/Steps" node_paths=PackedStringArray("sequence", "hint_sign")]
script = ExtResource("13_mi3la")
sequence = [NodePath("../../Objects/Yellow"), NodePath("../../Objects/Green"), NodePath("../../Objects/Blue")]
hint_sign = NodePath("../../Signs/HintSign1")

[node name="SequencePuzzleStep2" type="Node2D" parent="OnTheGround/SequencePuzzle/Steps" node_paths=PackedStringArray("sequence", "hint_sign")]
position = Vector2(0, -52)
script = ExtResource("13_mi3la")
sequence = [NodePath("../../Objects/Blue"), NodePath("../../Objects/Green"), NodePath("../../Objects/Yellow"), NodePath("../../Objects/Green")]
hint_sign = NodePath("../../Signs/HintSign2")

[node name="SequencePuzzleStep3" type="Node2D" parent="OnTheGround/SequencePuzzle/Steps" node_paths=PackedStringArray("sequence", "hint_sign")]
position = Vector2(0, -52)
script = ExtResource("13_mi3la")
sequence = [NodePath("../../Objects/Blue"), NodePath("../../Objects/Pink"), NodePath("../../Objects/Yellow"), NodePath("../../Objects/Green")]
hint_sign = NodePath("../../Signs/HintSign3")

[node name="SequencePuzzleStep4" type="Node2D" parent="OnTheGround/SequencePuzzle/Steps" node_paths=PackedStringArray("sequence", "hint_sign")]
position = Vector2(0, -52)
script = ExtResource("13_mi3la")
sequence = [NodePath("../../Objects/Pink"), NodePath("../../Objects/Yellow"), NodePath("../../Objects/Green"), NodePath("../../Objects/Purple")]
hint_sign = NodePath("../../Signs/HintSign4")

[node name="RocasPuzzle" type="Node2D" parent="OnTheGround/SequencePuzzle"]
script = ExtResource("14_fmak2")

[node name="roca1" type="StaticBody2D" parent="OnTheGround/SequencePuzzle/RocasPuzzle"]
position = Vector2(371, 476)

[node name="Sprite2D" type="Sprite2D" parent="OnTheGround/SequencePuzzle/RocasPuzzle/roca1"]
position = Vector2(29, -60)
texture = ExtResource("14_dwbnx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnTheGround/SequencePuzzle/RocasPuzzle/roca1"]
position = Vector2(25, -60)
shape = SubResource("CapsuleShape2D_fmak2")

[node name="roca2" type="StaticBody2D" parent="OnTheGround/SequencePuzzle/RocasPuzzle"]
position = Vector2(565, 417)

[node name="Sprite2D" type="Sprite2D" parent="OnTheGround/SequencePuzzle/RocasPuzzle/roca2"]
position = Vector2(29, -60)
texture = ExtResource("14_dwbnx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnTheGround/SequencePuzzle/RocasPuzzle/roca2"]
position = Vector2(25, -60)
shape = SubResource("CapsuleShape2D_fmak2")

[node name="roca3" type="StaticBody2D" parent="OnTheGround/SequencePuzzle/RocasPuzzle"]
position = Vector2(753, 228)

[node name="Sprite2D" type="Sprite2D" parent="OnTheGround/SequencePuzzle/RocasPuzzle/roca3"]
position = Vector2(29, -60)
texture = ExtResource("14_dwbnx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnTheGround/SequencePuzzle/RocasPuzzle/roca3"]
position = Vector2(25, -60)
shape = SubResource("CapsuleShape2D_fmak2")

[node name="roca4" type="StaticBody2D" parent="OnTheGround/SequencePuzzle/RocasPuzzle"]
position = Vector2(819, 352)

[node name="Sprite2D" type="Sprite2D" parent="OnTheGround/SequencePuzzle/RocasPuzzle/roca4"]
position = Vector2(29, -60)
texture = ExtResource("14_dwbnx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnTheGround/SequencePuzzle/RocasPuzzle/roca4"]
position = Vector2(25, -60)
shape = SubResource("CapsuleShape2D_fmak2")

[node name="CollectibleItem" parent="OnTheGround" instance=ExtResource("14_tcvxo")]
position = Vector2(898, 505)
revealed = false
next_scene = "uid://coi4lvxir542y"
item = SubResource("Resource_u8qfb")
collected_dialogue = ExtResource("16_ptwq2")
dialogue_title = &"well_done"

[node name="Sign" parent="OnTheGround" instance=ExtResource("17_5m326")]
position = Vector2(321, 510)
direction = 1
text = "First melody: yellow, green, blue."

[node name="ScreenOverlay" type="CanvasLayer" parent="."]

[node name="HUD" parent="." instance=ExtResource("18_6ycc1")]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2(2, 2)
position_smoothing_enabled = true

[node name="Cinematic" type="Node2D" parent="."]
position = Vector2(-1, 0)
script = ExtResource("19_gg3uk")
dialogue = ExtResource("16_ptwq2")
metadata/_custom_type_script = "uid://x1mxt6bmei2o"

[node name="Node" type="Node" parent="."]

[node name="Paredes" type="TileMapLayer" parent="Node"]
position = Vector2(-19, 8)
tile_map_data = PackedByteArray("AAADAAgABAABAAQAAAADAAkABAABAAUAAAAEAAgABAABAAQAAAAEAAkABAABAAUAAAACAAgABAABAAQAAAACAAkABAABAAUAAAD//wgABAAAAAQAAAD//wkABAAAAAUAAAAAAAgABAABAAQAAAAAAAkABAABAAUAAAABAAgABAABAAQAAAABAAkABAABAAUAAAAFAAgABAABAAQAAAAFAAkABAABAAUAAAAGAAgABAABAAEAAAAGAAkABAACAAMAAAAGAAcABAADAAEAAAAGAAMABAADAAEAAAAGAAIABAADAAEAAAAGAAEABAADAAEAAAAGAAAABAADAAEAAAD//wYABAADAAMAAAD//wUABAACAAIAAAD//wQABAACAAIAAAD//wMABAACAAIAAAD//wIABAACAAIAAAD//wEABAACAAIAAAD//wAABAACAAIAAAD/////BAABAAEAAAAAAAAABAABAAMAAAABAAAABAABAAMAAAACAAAABAABAAMAAAADAAAABAABAAMAAAAEAAAABAABAAMAAAAFAAAABAABAAMAAAAAAP//BAABAAIAAAABAP//BAABAAIAAAACAP//BAABAAIAAAADAP//BAABAAIAAAAEAP//BAABAAIAAAAFAP//BAABAAIAAAAGAP//BAACAAEAAAAAAAUABQAAAAAAAAAFAAYABwAAAAAAAAAEAAcABQAAAAAAAAADAAQABQAAAAAAAAAHAAkABAABAAUAAAAIAAkABAABAAUAAAAJAAkABAABAAUAAAAKAAkABAABAAUAAAALAAkABAABAAUAAAAMAAkABAABAAUAAAANAAkABAABAAUAAAAPAAkABAABAAUAAAAQAAkABAABAAUAAAAHAAgABAABAAQAAAAIAAgABAABAAQAAAAJAAgABAABAAQAAAAKAAgABAABAAQAAAALAAgABAABAAQAAAAMAAgABAABAAQAAAANAAgABAABAAQAAAAPAAgABAABAAQAAAAIAAYABAADAAMAAAAIAAUABAADAAEAAAAKAAYABAADAAMAAAAKAAUABAADAAEAAAAKAAQABAAAAAEAAAAKAAMABAADAAEAAAAKAAIABAADAAEAAAAJAAIABAABAAUAAAAIAAIABAAAAAUAAAAIAAEABAAAAAQAAAAMAAEABAAAAAMAAAAMAAQABAACAAIAAAALAAQABAABAAQAAAAIAAQABAACAAQAAAALAAUABAABAAMAAAAJAAEABAABAAQAAAAKAAEABAACAAAAAAAHAP//BAABAAUAAAAIAP//BAABAAUAAAAJAP//BAABAAUAAAAKAP//BAABAAUAAAALAP//BAABAAUAAAAMAP//BAAAAAEAAAAGAP7/BAABAAQAAAAHAP7/BAABAAQAAAAIAP7/BAABAAQAAAAJAP7/BAABAAQAAAAKAP7/BAABAAQAAAALAP7/BAABAAQAAAAMAP7/BAABAAQAAAAMAAAABAAAAAIAAAANAAEABAACAAMAAAANAP//BAACAAEAAAAOAP//BAABAAMAAAAPAAAABAADAAEAAAAPAAEABAADAAEAAAAPAAIABAADAAEAAAAPAAMABAADAAEAAAANAP7/BAABAAIAAAAOAP7/BAABAAIAAAAPAP7/BAADAAEAAAAPAP//BAADAAEAAAANAAAABAACAAIAAAAOAAMABAAAAAQAAAAOAAQABAAAAAMAAAAPAAQABAADAAEAAAAPAAUABAADAAEAAAAPAAYABAADAAEAAAAPAAcABAADAAEAAAAMAAUABAADAAEAAAAMAAYABAADAAEAAAAMAAcABAADAAEAAAAMAAMABAADAAAAAAAOAAkAAAADAAAAAAANAAwABAAAAAIAAAAOAAwABAAAAAIAAAAGAAQABAAAAAEAAAAHAAQABAABAAQAAAAHAAUABAABAAMAAAAGAAUABAAAAAMAAAA=")
tile_set = SubResource("TileSet_jh5wg")

[connection signal="solved" from="OnTheGround/SequencePuzzle" to="OnTheGround/CollectibleItem" method="reveal"]
